ide: fixed line-wrapping in build log output

--- a/ide/static/ide/ide.css
+++ b/ide/static/ide/ide.css
@@ -68,6 +68,10 @@
     padding-left:10px;
 }
 
+#build_log div {
+	white-space: pre-wrap;
+}
+
 #build_log .err {
     color:red;
 }
